--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width">
-  <meta name="baseurl" content="https://moose-wilson.cf/">
+  <meta name="baseurl" content="http://moose-wilson.cf/">
 
   <title>Home | Moose-Wilson LLC</title>
 
-  <link rel="stylesheet" type="text/css" media="all" href="rw_common/themes/offroad/consolidated.css?rwcache=543636424" />
+  <link rel="stylesheet" type="text/css" media="all" href="rw_common/themes/offroad/consolidated.css?rwcache=543672588" />
 		
   
   <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700" rel="stylesheet">
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="site-navigation-inner">
-            <ul><li class="selected"><a href="./" rel="" class="current">Home</a></li></ul>
+            <ul><li class="selected"><a href="./" rel="" class="current">Home</a></li><li><a href="contact-form/" rel="">Contact Us</a></li></ul>
           </div>
         </div>
       </div>
@@ -46,11 +46,11 @@
       <div class="container">
         <div class="site-branding">
           <div class="site-title">
-            <a href="https://moose-wilson.cf/">Moose-Wilson LLC</a>
+            <a href="http://moose-wilson.cf/">Moose-Wilson LLC</a>
           </div>
 
           <div class="site-logo">
-            <a href="https://moose-wilson.cf/" class="site-logo"></a>
+            <a href="http://moose-wilson.cf/" class="site-logo"><img src="rw_common/images/bears-on-road-e1448468221491.jpg" width="800" height="533" alt="Moose-Wilson LLC"/></a>
           </div>
 
           <div class="site-description">
@@ -83,7 +83,7 @@
     <footer id="footer" class="site-footer" role="contentinfo">
       <div class="row">
         <div class="col-xs-12">
-          &copy; 2018 Ben Aepli
+          &copy; 2018 Moose-Wilson LLC <a href="#" id="rw_email_contact">Contact Us</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":ad";var _rwObsfuscatedHref3 = "min";var _rwObsfuscatedHref4 = "@mo";var _rwObsfuscatedHref5 = "ose";var _rwObsfuscatedHref6 = "-wi";var _rwObsfuscatedHref7 = "lso";var _rwObsfuscatedHref8 = "n.c";var _rwObsfuscatedHref9 = "f";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script>
         </div>
       </div>
     </footer>
@@ -92,9 +92,9 @@
   <div class="body-overlay"></div>
 
   <!-- Javascript includes -->
-  <script src="rw_common/themes/offroad/javascript.js?rwcache=543636424"></script>
-  <script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/background-blur.js?rwcache=543636424"></script>
-		<script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/sidebar-right.js?rwcache=543636424"></script>
+  <script src="rw_common/themes/offroad/javascript.js?rwcache=543672588"></script>
+  <script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/background-blur.js?rwcache=543672588"></script>
+		<script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/sidebar-right.js?rwcache=543672588"></script>
 		
   
 </body>
