--- a/code/index.html
+++ b/code/index.html
@@ -10,17 +10,17 @@
   <meta name="viewport" content="width=device-width">
   <meta name="baseurl" content="http://moose-wilson.cf/">
 
-  <title>Home | Moose-Wilson LLC</title>
+  <title>Contact Us | Moose-Wilson LLC</title>
 
-  <link rel="stylesheet" type="text/css" media="all" href="rw_common/themes/offroad/consolidated.css?rwcache=543711240" />
+  <link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/offroad/consolidated.css?rwcache=543711240" />
 		
   
   <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet">
 
   <!--[if lt IE 9]>
-    <script src="rw_common/themes/offroad/assets/javascript/html5shiv.js"></script>
-    <script src="rw_common/themes/offroad/assets/javascript/respond.js"></script>
+    <script src="../rw_common/themes/offroad/assets/javascript/html5shiv.js"></script>
+    <script src="../rw_common/themes/offroad/assets/javascript/respond.js"></script>
   <![endif]-->
 
   
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="site-navigation-inner">
-            <ul><li class="selected"><a href="./" rel="" class="current">Home</a></li><li><a href="code/" rel="">Contact Us</a></li></ul>
+            <ul><li><a href="../" rel="">Home</a></li><li class="selected"><a href="./" rel="" class="current">Contact Us</a></li></ul>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           </div>
 
           <div class="site-logo">
-            <a href="http://moose-wilson.cf/" class="site-logo"><img src="rw_common/images/bears-on-road-e1448468221491.jpg" width="800" height="533" alt="Moose-Wilson LLC"/></a>
+            <a href="http://moose-wilson.cf/" class="site-logo"><img src="../rw_common/images/bears-on-road-e1448468221491.jpg" width="800" height="533" alt="Moose-Wilson LLC"/></a>
           </div>
 
           <div class="site-description">
@@ -64,7 +64,10 @@
       <div class="row">
         <main id="content" class="site-content col-xs-12 col-md-9" role="main">
           <div class="site-content-inner">
-            
+            <!-- www.123formbuilder.com script begins here -->
+<script type="text/javascript" defer src="//www.123formbuilder.com/embed/3576319.js?rwcache=543711240" data-role="form" data-default-width="650px"></script>
+<p>Powered by <a class="footerLink13" title="123FormBuilder" href="https://www.123formbuilder.com">123FormBuilder</a> | <a style="font-size:small!important;color:#000000!important; text-decoration:underline!important;" title="Looks like phishing? Report it!" href="http://www.123formbuilder.com/sfnew.php?s=123contactform-52&control119314=///contact-form--3576319.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p><!-- www.123formbuilder.com script ends here -->
+
           </div>
         </main>
 
@@ -92,9 +95,9 @@
   <div class="body-overlay"></div>
 
   <!-- Javascript includes -->
-  <script src="rw_common/themes/offroad/javascript.js?rwcache=543711240"></script>
-  <script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/background-blur.js?rwcache=543711240"></script>
-		<script type="text/javascript" src="rw_common/themes/offroad/assets/javascript/sidebar-right.js?rwcache=543711240"></script>
+  <script src="../rw_common/themes/offroad/javascript.js?rwcache=543711240"></script>
+  <script type="text/javascript" src="../rw_common/themes/offroad/assets/javascript/background-blur.js?rwcache=543711240"></script>
+		<script type="text/javascript" src="../rw_common/themes/offroad/assets/javascript/sidebar-right.js?rwcache=543711240"></script>
 		
   
 </body>
