--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="site-navigation-inner">
-            <ul><li class="selected"><a href="./" rel="" class="current">Home</a></li><li><a href="code/" rel="">Contact Us</a></li></ul>
+            <ul><li class="selected"><a href="./" rel="" class="current">Home</a></li></ul>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
     <footer id="footer" class="site-footer" role="contentinfo">
       <div class="row">
         <div class="col-xs-12">
-          &copy; 2018 Moose-Wilson LLC
+          &copy; 2018 Moose-Wilson LLC <a href="#" id="rw_email_contact">Contact Us</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":ad";var _rwObsfuscatedHref3 = "min";var _rwObsfuscatedHref4 = "@mo";var _rwObsfuscatedHref5 = "ose";var _rwObsfuscatedHref6 = "-wi";var _rwObsfuscatedHref7 = "lso";var _rwObsfuscatedHref8 = "n.c";var _rwObsfuscatedHref9 = "f";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script>
         </div>
       </div>
     </footer>
